# internal/dto/nlv_request.go
@@ -1,0 +1,5 @@
+package dto
+
+type NLVQueryRequest struct {
+	Query string `json:"query" binding:"required"`
+}
